kubernetes/apps/media/calibre-web/app/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: calibre-web
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`calibre.toskbot.xyz`)
      kind: Rule
      services:
        - name: calibre-web
          port: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: calibre-web-external-dns
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    external-dns.home.arpa/enabled: "true"
    external-dns.alpha.kubernetes.io/target: ingress.toskbot.xyz
    cert-manager.io/cluster-issuer: "letsencrypt-production"
spec:
  rules:
    - host: calibre.toskbot.xyz
  tls:
  - hosts:
    - calibre.toskbot.xyz
